TCH-glibc: replace DIR_GIT_ORIGIN with github website
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/TCH-glibc/Makefile.glibc-0231
+++ b/TCH-glibc/Makefile.glibc-0231
@@ -1,7 +1,7 @@
 #
 # Makefile for glibc in toolchain
 #
-GLIBC_0231_ORIGIN	:= $(DIR_GIT_ORIGIN)/glibc.git
+GLIBC_0231_ORIGIN	:= https://github.com/bminor/glibc.git
 GLIBC_0231_VERSION	:= glibc-2.31
 GLIBC_0231_BRANCH	:= dadao-0231
 GLIBC_0231_TARGET	?= dadao-linux-gnu
