--- a/DADAO-tests/isa/Makefile
+++ b/DADAO-tests/isa/Makefile
@@ -4,7 +4,7 @@
 
 src_dir ?= .
 
-include $(src_dir)/../Makefile.tests-rules
+include $(src_dir)/../Makerules
 include $(src_dir)/dduii/Makefrag
 
 default: all
