--- a/TCH-binutils-gdb/Makefile.binutils-gdb-0235
+++ b/TCH-binutils-gdb/Makefile.binutils-gdb-0235
@@ -98,7 +98,7 @@ endif
 	# handle opcodes dir
 	@cp -a $(BINUTILS_GDB_0235_NEWFILES)/opcodes/* $(BINUTILS_GDB_0235_SOURCE)/opcodes/
 	# OPCODES: Generate dadao opcodes file
-	@make TARGET_OPCODES=$(BINUTILS_GDB_0235_OPCODES) -C $(DIR_DADAO_OPCODES) opcodes-binutils
+	@make TARGET_OPCODES=$(BINUTILS_GDB_0235_OPCODES) opcodes-binutils
 	@cd $(BINUTILS_GDB_0235_SOURCE);				\
 		git add opcodes;					\
 		git commit -sm"DADAO: add opcodes support";		\
