SIM-qemu: use inc.c file generated by opcodes-parse
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/SIM-qemu/Makefile.qemu-0600
+++ b/SIM-qemu/Makefile.qemu-0600
@@ -12,7 +12,8 @@ QEMU_0600_PATCHES	:= $(DIR_DADAO_TOP)/SIM-qemu/qemu-0600-patches
 QEMU_0600_FIXUPS	:= $(DIR_DADAO_TOP)/SIM-qemu/qemu-0600-fixups
 
 QEMU_0600_SOURCE	:= $(DIR_DADAO_SOURCE)/qemu-0600
-QEMU_0600_DECODE	:= $(QEMU_0600_SOURCE)/target/dadao/decode-dadao.inc.c
+QEMU_0600_DECODETREE	:= $(QEMU_0600_SOURCE)/scripts/decodetree.py
+QEMU_0600_DECODEFILE	:= $(QEMU_0600_SOURCE)/target/dadao/decode-dadao.inc.c
 QEMU_0600_BUILD		:= $(DIR_DADAO_BUILD)/qemu-0600
 QEMU_0600_INSTALL	?= $(DIR_DADAO_INSTALL)
 #QEMU_0600_INSTALL	?= $(DIR_DADAO_BUILD)/__qemu-0600
@@ -55,7 +56,8 @@ endif
 	@echo "TARGET: Copy target/dadao dir"
 	@cp -a $(QEMU_0600_NEWFILES)/target/* $(QEMU_0600_SOURCE)/target/
 	@echo "TARGET-DECODE: Generate dadao decodetree file"
-	@make TARGET_DECODE_QEMU=$(QEMU_0600_DECODE) decode-qemu
+	@test -f $(OPCODES_OUTPUT_QEMU) || make -s -C $(DIR_DADAO_TOP) opcodes-parse
+	@$(PYTHON) $(QEMU_0600_DECODETREE) --decode disas_dadao -o $(QEMU_0600_DECODEFILE) $(OPCODES_OUTPUT_QEMU)
 	@cd $(QEMU_0600_SOURCE);					\
 		git add target/dadao;					\
 		git commit -sm"DADAO-target: add dadao support"
