DADAO-rte: specify referenced riscv-isa-sim version
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-rte/Makefile.rte
+++ b/DADAO-rte/Makefile.rte
@@ -7,6 +7,8 @@ RTE_GITHUB		:= https://github.com/riscv/riscv-isa-sim.git
 RTE_SOURCE		:= $(DIR_DADAO_SOURCE)/rte
 RTE_BUILD		:= $(DIR_DADAO_BUILD)/rte
 RTE_INSTALL		?= $(DIR_DADAO_TARGET)
+RTE_VERSION		:= v1.1.0
+RTE_BRANCH		:= dadao
 
 RTE_PATCHES		:= $(DIR_DADAO_TOP)/DADAO-rte/rte-patches
 
@@ -34,6 +36,8 @@ else
 	# Clone local repo
 	@git clone -q $(RTE_LOCAL) -- $(RTE_SOURCE)
 endif
+	# Checkout specified version
+	@cd $(RTE_SOURCE); git checkout -qb $(RTE_BRANCH) $(RTE_VERSION)
 	# Apply patches
 	@cd $(RTE_SOURCE); git am $(RTE_PATCHES)/*.patch
 
