--- a/DADAO-tests/Makefile.tests-isa
+++ b/DADAO-tests/Makefile.tests-isa
@@ -11,23 +11,23 @@ tests-isa-source:
 	@test -d $(TESTS_ISA_BUILD) || mkdir -p $(TESTS_ISA_BUILD)
 	@ln -s $(TESTS_ISA_SOURCE)/Makefile $(TESTS_ISA_BUILD)/Makefile
 
-tests-isa-p-build:
-	@make src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) dduii-p
+tests-isa-bare-build:
+	@make src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) dduii-bare
 
 tests-isa-qemu-build:
 	@make src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) dduii-qemu
 
-tests-isa-p-run:
-	@make src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) run-p
+tests-isa-bare-run:
+	@make src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) run-bare
 
 tests-isa-qemu-run:
 	@make src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) run-qemu
 
-tests-isa-p-highfive:
+tests-isa-bare-highfive:
 	@make -s tests-isa-clean
 	@make -s tests-isa-source
-	@make -s tests-isa-p-build
-	@make -s tests-isa-p-run
+	@make -s tests-isa-bare-build
+	@make -s tests-isa-bare-run
 
 tests-isa-qemu-highfive:
 	@make -s tests-isa-clean
