--- a/SOC-chipyard/Makefile.chipyard-0107
+++ b/SOC-chipyard/Makefile.chipyard-0107
@@ -63,7 +63,9 @@ chipyard-0107-build-new:
 chipyard-0107-build:
 	@cd $(CHIPYARD_0107_SOURCE)/sims/verilator;						\
 		RISCV=$(DIR_DADAO_TARGET)							\
-		make CONFIG=$(CHIPYARD_0107_DADAO_CONFIG) sim_dir=$(CHIPYARD_0107_BUILD)
+		make -j16 VERILATOR_THREADS=8							\
+			CONFIG=$(CHIPYARD_0107_DADAO_CONFIG)					\
+			sim_dir=$(CHIPYARD_0107_BUILD)
 
 chipyard-0107-run-binary:
 	@cd $(CHIPYARD_0107_SOURCE)/sims/verilator;						\
