--- a/SOC-chipyard/Makefile.chipyard-0107
+++ b/SOC-chipyard/Makefile.chipyard-0107
@@ -15,7 +15,7 @@ CHIPYARD_0107_CONFIG		:= $(DIR_DADAO_TOP)/SOC-chipyard/chipyard-0107-config
 CHIPYARD_0107_PATCHES		:= $(DIR_DADAO_TOP)/SOC-chipyard/chipyard-0107-patches
 
 CHIPYARD_0107_DADAO_WUMING	:= $(DIR_DADAO_TOP)/SOC-chipyard/dadao-wuming
-CHIPYARD_0107_DADAO_CONFIG	?= Wuming1StageConfig
+CHIPYARD_0107_DADAO_CONFIG	?= Wuming5StageConfig
 #CHIPYARD_0107_DADAO_BINARY	?= $(CHIPYARD_0107_SOURCE)/generators/riscv-sodor/riscv-bmarks/dhrystone.riscv
 CHIPYARD_0107_DADAO_BINARY	?= $(DIR_DADAO_TOP)/__tests/isa/dduii-p-and
 
@@ -65,6 +65,13 @@ chipyard-0107-build:
 		RISCV=$(DIR_DADAO_TARGET)							\
 		make -j16 VERILATOR_THREADS=8							\
 			CONFIG=$(CHIPYARD_0107_DADAO_CONFIG)					\
+			sim_dir=$(CHIPYARD_0107_BUILD)
+
+chipyard-0107-build-stage1:
+	@cd $(CHIPYARD_0107_SOURCE)/sims/verilator;						\
+		RISCV=$(DIR_DADAO_TARGET)							\
+		make -j16 VERILATOR_THREADS=8							\
+			CONFIG=Wuming1StageConfig						\
 			sim_dir=$(CHIPYARD_0107_BUILD)
 
 chipyard-0107-run-binary:
