DADAO-opcodes: rename parse.py to parse-opcodes.py
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-opcodes/Makefile.opcodes
+++ b/DADAO-opcodes/Makefile.opcodes
@@ -3,7 +3,7 @@ PYTHON			:= /usr/bin/python3
 OPCODES_SRC_DIR		:= $(DIR_DADAO_TOP)/DADAO-opcodes
 OPCODES_DST_DIR		?= $(DIR_DADAO_SOURCE)/__opcodes/
 
-OPCODES_PARSE		:= $(OPCODES_SRC_DIR)/parse.py
+OPCODES_PARSE		:= $(OPCODES_SRC_DIR)/parse-opcodes.py
 OPCODES_INPUT		:= $(OPCODES_SRC_DIR)/simrisc.opcodes
 OPCODES_OUTPUT_QEMU	:= $(OPCODES_DST_DIR)/output.qemu
 OPCODES_OUTPUT_BIN	:= $(OPCODES_DST_DIR)/output.bin
