--- a/SOC-chipyard/Makefile.chipyard-0107
+++ b/SOC-chipyard/Makefile.chipyard-0107
@@ -15,7 +15,6 @@ CHIPYARD_0107_CONFIG		:= $(DIR_DADAO_TOP)/SOC-chipyard/chipyard-0107-config
 CHIPYARD_0107_PATCHES		:= $(DIR_DADAO_TOP)/SOC-chipyard/chipyard-0107-patches
 
 CHIPYARD_0107_DADAO_WUMING	:= $(DIR_DADAO_TOP)/SOC-chipyard/dadao-wuming
-CHIPYARD_0107_DADAO_INSN	:= $(CHIPYARD_0107_SOURCE)/generators/dadao-wuming/src/main/scala/common/instructions.scala
 CHIPYARD_0107_DADAO_CONFIG	?= Wuming5StageConfig
 #CHIPYARD_0107_DADAO_BINARY	?= $(CHIPYARD_0107_SOURCE)/generators/riscv-sodor/riscv-bmarks/dhrystone.riscv
 CHIPYARD_0107_DADAO_BINARY	?= $(DIR_DADAO_TOP)/__tests/isa/dduii-p-and
@@ -50,15 +49,6 @@ endif
 	@cd $(CHIPYARD_0107_SOURCE);								\
 		git add generators/dadao-wuming;						\
 		git commit -asm"DADAO: add dadao-wuming"
-	# Generate instructions.scala
-	@rm -f $(OPCODES_BITPAT)
-	@make -s -C $(DIR_DADAO_TOP) opcodes-bitpat
-	@cat $(DIR_DADAO_TOP)/SOC-chipyard/instructions.scala-head		>  $(CHIPYARD_0107_DADAO_INSN)
-	@cat $(OPCODES_OUTPUT_BITPAT)						>> $(CHIPYARD_0107_DADAO_INSN)
-	@cat $(DIR_DADAO_TOP)/SOC-chipyard/instructions.scala-tail		>> $(CHIPYARD_0107_DADAO_INSN)
-	@cd $(CHIPYARD_0107_SOURCE);								\
-		git add generators/dadao-wuming;						\
-		git commit -asm"DADAO: add dadao instructions.scala"
 	# Add dadao configs and patches
 	@cp -a $(CHIPYARD_0107_CONFIG)/* $(CHIPYARD_0107_SOURCE)/generators/chipyard/src/main/scala/config/
 	@cd $(CHIPYARD_0107_SOURCE);								\
@@ -112,4 +102,15 @@ chipyard-0107-highfive:
 	# 5. Build chipyard ...
 	@make -s chipyard-0107-build			1>> $(CHIPYARD_0107_LOG_STDOUT) 2>> $(CHIPYARD_0107_LOG_STDERR)
 	@echo "--- BUILD chipyard-0107 DONE! ---"
+
+CHIPYARD_0107_INSN_OLD	:= $(CHIPYARD_0107_SOURCE)/generators/dadao-wuming/src/main/scala/common/instructions.scala
+CHIPYARD_0107_INSN_NEW	:= $(OPCODES_DST_DIR)/instructions.scala
+chipyard-0107-check-insn:
+	# Generate instructions.scala
+	@rm -f $(OPCODES_BITPAT)
+	@make -s -C $(DIR_DADAO_TOP) opcodes-bitpat
+	@cat $(DIR_DADAO_TOP)/SOC-chipyard/instructions.scala-head		>  $(CHIPYARD_0107_INSN_NEW)
+	@cat $(OPCODES_OUTPUT_BITPAT)						>> $(CHIPYARD_0107_INSN_NEW)
+	@cat $(DIR_DADAO_TOP)/SOC-chipyard/instructions.scala-tail		>> $(CHIPYARD_0107_INSN_NEW)
+	@diff -u $(CHIPYARD_0107_INSN_OLD) $(CHIPYARD_0107_INSN_NEW)
 
