--- a/SOC-chipyard/Makefile.chipyard-0107
+++ b/SOC-chipyard/Makefile.chipyard-0107
@@ -30,6 +30,7 @@ chipyard-0107-clean:
 chipyard-0107-prepare:
 	# Check necessary fesvr headers
 	@test -d $(DIR_DADAO_TARGET)/include/fesvr || make -s -C $(DIR_DADAO_TOP) rte-highfive
+	@test -d $(DIR_DADAO_TESTS_BOOTROM_BUILD)  || make -s -C $(DIR_DADAO_TOP) bootrom-highfive
 
 chipyard-0107-source:
 	@test -d $(DIR_DADAO_SOURCE) || mkdir -p $(DIR_DADAO_SOURCE)
@@ -65,6 +66,8 @@ chipyard-0107-build:
 		RISCV=$(DIR_DADAO_TARGET)							\
 		make -j16 VERILATOR_THREADS=8							\
 			CONFIG=$(CHIPYARD_0107_DADAO_CONFIG)					\
+			BOOTROM_FILES=bootrom.dadao.img						\
+			BOOTROM_FILES_DIR=$(DIR_DADAO_TESTS_BOOTROM_BUILD)			\
 			sim_dir=$(CHIPYARD_0107_BUILD)
 
 chipyard-0107-build-stage1:
