--- a/SOC-chipyard/Makefile.chipyard-0107
+++ b/SOC-chipyard/Makefile.chipyard-0107
@@ -75,13 +75,18 @@ chipyard-0107-build-stage1:
 		RISCV=$(DIR_DADAO_TARGET)							\
 		make -j16 VERILATOR_THREADS=8							\
 			CONFIG=Wuming1StageConfig						\
+			BOOTROM_FILES=bootrom.dadao.img						\
+			BOOTROM_FILES_DIR=$(DIR_DADAO_TESTS_BOOTROM_BUILD)			\
 			sim_dir=$(CHIPYARD_0107_BUILD)
 
 chipyard-0107-run-binary:
 	@cd $(CHIPYARD_0107_SOURCE)/sims/verilator;						\
 		RISCV=$(DIR_DADAO_TARGET)							\
 		PATH=$(CHIPYARD_0107_DADAO_PATH)						\
-		make CONFIG=$(CHIPYARD_0107_DADAO_CONFIG) sim_dir=$(CHIPYARD_0107_BUILD)	\
+		make CONFIG=$(CHIPYARD_0107_DADAO_CONFIG)					\
+			BOOTROM_FILES=bootrom.dadao.img						\
+			BOOTROM_FILES_DIR=$(DIR_DADAO_TESTS_BOOTROM_BUILD)			\
+			sim_dir=$(CHIPYARD_0107_BUILD)						\
 			 run-binary BINARY=$(CHIPYARD_0107_DADAO_BINARY)
 
 chipyard-0107-tracer:
